--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "mongoose": "^5.10.8",
-    "postman-request": "^2.88.1-postman.26"
+    "postman-request": "^2.88.1-postman.26",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
