--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,css,hbs"
+    "dev": "nodemon src/app.js -e js,css,hbs",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.11.6",
     "apple-mapkit-js": "^6.1.0",
+    "babel": "^6.23.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "mongoose": "^5.10.8",
@@ -20,6 +23,12 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^2.0.4",
+    "sass": "^1.27.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
