begin mapkit integration

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "apple-mapkit-js": "^6.1.0",
     "babel": "^6.23.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "postman-request": "^2.88.1-postman.26",
     "qs": "^6.9.4",
