migrate front end to react

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-node_modules/
-.DS_Store
-todo.md
-dist/
-config/
-webpack.congig.js
-src/utils/apiKeys.js
-src/utils/AuthKey_FCHCKTS567.p8
+node_modules
+.DS_Store 
+api/node_modules/
+api/.DS_Store
+api/todo.md/
+api/.vscode
+api/dist/
+api/config/
+api/webpack.congig.js
+api/src/utils/apiKeys.js
+api/src/utils/AuthKey_FCHCKTS567.p8
