--- a/package.json
+++ b/package.json
@@ -1,37 +1,57 @@
 {
-  "name": "ShulFinder",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,css,hbs",
-    "build": "webpack --config webpack.config.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "shul-finder",
+  "proxy": "http://localhost:3001/",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/core": "^7.11.6",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/apple-mapkit-js": "^5.50.0",
+    "@types/bootstrap": "^5.0.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.19.3",
+    "@types/react": "^16.9.55",
+    "@types/react-bootstrap": "^0.32.24",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "apple-mapkit-js": "^6.1.0",
-    "babel": "^6.23.0",
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "hbs": "^4.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.8",
-    "postman-request": "^2.88.1-postman.26",
-    "qs": "^6.9.4",
-    "url": "^0.11.0"
+    "bootstrap": "^4.5.3",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-mapkit": "^0.6.5",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "typescript": "^4.0.5",
+    "web-vitals": "^0.2.4"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "nodemon": "^2.0.4",
-    "sass": "^1.27.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {}
 }
