--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/recharts": "^1.8.17",
     "apple-mapkit-js": "^6.1.0",
     "bootstrap": "^4.5.3",
     "node-sass": "^5.0.0",
@@ -26,6 +27,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recharts": "^1.8.5",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
