--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.55",
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.9",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/recharts": "^1.8.17",
@@ -22,7 +23,9 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-mapkit": "^0.6.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
